# varuna

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.thirdparty.md  LICENSE.thirdparty.txt  Makefile  README  README.md  appveyor.yml  build-docs.sh  build.sh  code.ll  code.txt  code.va  commit.sh  debug.sh  format.sh  morecode.va  quick-guide.md
projects/: CMakeLists.txt
scripts/: build.sh  clear.sh  commit.sh  debug.sh  doxygen.sh  format.sh
src/: CLI.cpp  CLI.h  CMakeLists.txt  Dispatcher.h  Doc.h  Main.cpp  Runner.cpp  Runner.h
src/app/: CommandLine.cpp  CommandLine.h
src/ast/: AST.h  ASTControlStatement.h  ASTExpression.h  ASTFunctionStatement.h  ASTLiteralExpression.h  ASTNode.cpp  ASTNode.h  ASTOperatorExpression.h  ASTParentSolverVisitor.cpp  ASTParentSolverVisitor.h  ASTStatement.h  CMakeLists.txt  ControlStmt.h  DumpASTVisitor.cpp  DumpASTVisitor.h  DumpVisitor.cpp  DumpVisitor.h  Expr.h  FunctionStmt.h  FwdDecl.h  LiteralExpr.h  Node.cpp  Node.h  OperatorExpr.h  ParentSolverVisitor.cpp  ParentSolverVisitor.h  Serializer.cpp  Serializer.h  Stmt.h  Visitor.h
src/codegen/: CMakeLists.txt  Codegen.cpp  Codegen.h  CodegenInfo.h  CodegenVisitor.cpp  CodegenVisitor.h  CodegenVisitorAccept.cpp  CodegenVisitorVisit.cpp  Generator.cpp  Generator.h  GrammarCheckerVisitor.cpp  GrammarCheckerVisitor.h  GrammarCheckerVisitorAccept.cpp  ModuleFile.cpp  ModuleFile.h  Optimizer.cpp  Optimizer.h  Symbol.h  SymbolTable.h  Type.cpp  Type.h  TypeCast.cpp  TypeOperation.cpp  TypeOperation.h  TypeTable.h  TypedValue.h
src/core/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Doc.h  Frontend.cpp  Frontend.h  Run.cpp  Run.h
src/core/ast/: AST.h  ASTControlStatement.h  ASTExpression.h  ASTFunctionStatement.h  ASTLiteralExpression.h  ASTNode.h  ASTOperatorExpression.h  ASTParentSolverVisitor.cpp  ASTParentSolverVisitor.h  ASTStatement.h  CMakeLists.txt  DumpASTVisitor.cpp  DumpASTVisitor.h  FwdDecl.h  Visitor.h
src/core/codegen/: CMakeLists.txt  Codegen.cpp  Codegen.h  CodegenInfo.h  CodegenVisitor.cpp  CodegenVisitor.h  CodegenVisitorAccept.cpp  CodegenVisitorBase.h  CodegenVisitorVisit.cpp  GrammarCheckerVisitor.cpp  GrammarCheckerVisitor.h  GrammarCheckerVisitorAccept.cpp  LLVMCodegenVisitor.cpp  LLVMCodegenVisitor.h  Optimizer.cpp  Optimizer.h  Symbol.h  SymbolTable.h  Type.cpp  Type.h  TypeCast.cpp  TypeOperation.cpp  TypeOperation.h  TypeTable.h  TypedValue.h
src/core/grammar/: Grammar.cpp  Grammar.h  Token.h  Word.h
src/core/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  LexerGetNextToken.cpp  LexerStringMatch.cpp  Token.cpp  Token.h  TokenType.h
src/core/parser/: AST.h  ASTControlStatement.h  ASTExpression.h  ASTFunctionStatement.h  ASTLiteralExpression.h  ASTNode.h  ASTOperatorExpression.h  ASTStatement.h  CMakeLists.txt  DumpASTVisitor.cpp  DumpASTVisitor.h  ExpressionBase.h  Expressions.h  FwdDecl.h  Operator.h  ParseExpression.cpp  ParseStatement.cpp  Parser.cpp  Parser.h  ParserHandle.cpp  StatementBase.cpp  StatementBase.h  Statements.cpp  Statements.h  SyntaxTree.cpp  SyntaxTree.h  TreeNode.h  Visitor.h
src/core/preprocessor/: Preprocessor.cpp  Preprocessor.h
src/fe/: CMakeLists.txt
src/fe/api/: API.cpp  API.h  App.cpp  App.h  CMakeLists.txt  FwdDecl.h
src/fe/app/: App.cpp  App.h  CMakeLists.txt  FwdDecl.h
src/fe/cli/: CLI.cpp  CLI.h  CMakeLists.txt
src/lib/: CMakeLists.txt  cstd.h  cstd.ll
src/tests/: CMakeLists.txt  Makefile  TestCore.cpp  TestGeneral.cpp  TestLexer.cpp  TestMain.cpp  TestParser.cpp  TestPreprocessor.cpp  TestSystem.cpp  TestUtil.cpp  Tests.cpp
src/tests/error_inputs/: 01_invalid_main.va  02_invalid_token.va  03_parser_error.va  04_type_mismatch.va  05_invalid_operation.va  06_invalid_cast.va  07_void_variable.va  08_invalid_variable_name.va  09_invalid_import.va
src/tests/inputs/: 01_empty.va  02_main.va  03_functions.va  04_arithmetic.va  05_variables.va  06_if.va  07_while.va  08_for.va  09_cast.va  10_strings.va  11_alias.va  12_char.va  13_globals.va  14_modules.va  14_modules_importee.va
src/tests/ref_outputs/: .gitignore  01_empty.ll  01_empty_opt.ll  02_main.ll  02_main_opt.ll  03_functions.ll  03_functions_opt.ll  04_arithmetic.ll  04_arithmetic_opt.ll  05_variables.ll  05_variables_opt.ll  06_if.ll  06_if_opt.ll  07_while.ll  07_while_opt.ll  08_for.ll  08_for_opt.ll  09_cast.ll  09_cast_opt.ll  10_strings.ll  10_strings_opt.ll  11_alias.ll  11_alias_opt.ll  12_char.ll  12_char_opt.ll  13_globals.ll  13_globals_opt.ll  14_modules.ll  14_modules_importee.ll  14_modules_importee_opt.ll  14_modules_opt.ll  generate.sh  test_14_modules_importee.vamod
src/util/: BinReloc.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Compatibility.h  ErrorHandler.cpp  ErrorHandler.h  File.cpp  File.h  FileCache.cpp  FileCache.h  IteratorUtils.h  Logger.cpp  Logger.h  MathUtils.h  OperatorType.h  Platform.cpp  Platform.h  Process.cpp  Process.h  ProgramInfo.cpp  ProgramInfo.h  ProgramOptions.cpp  ProgramOptions.h  SafeEnum.cpp  SafeEnum.h  SourceLocation.cpp  SourceLocation.h  StreamReader.cpp  StreamReader.h  String.h  StringUtils.h  ThreadPool.cpp  ThreadPool.h  TmpFile.cpp  TmpFile.h
src/vart/: CMakeLists.txt  vart.c
tests/: CMakeLists.txt  TestCore.cpp  TestGeneral.cpp  TestLexer.cpp  TestMain.cpp  TestParser.cpp  TestPreprocessor.cpp  TestUtil.cpp
